Fix mobile dropdown spacing: override inherited height/flex-direction from nav li a

--- a/css/styles.css
+++ b/css/styles.css
@@ -463,17 +463,18 @@
   z-index: 9999;
   min-width: 100%;
 }
-.nav-dropdown .nav-dropdown__menu a {
+.nav-dropdown .nav-dropdown__menu a, .nav-dropdown .nav-dropdown__menu a:link, .nav-dropdown .nav-dropdown__menu a:visited {
   display: block;
   padding: 0.3rem 1rem;
   font-size: 1.2rem;
   color: #717171;
   text-decoration: none;
   white-space: nowrap;
-  height: auto;
+  height: auto !important;
   line-height: 1.4;
+  flex-direction: row;
 }
-.nav-dropdown .nav-dropdown__menu a:hover {
+.nav-dropdown .nav-dropdown__menu a:hover, .nav-dropdown .nav-dropdown__menu a:link:hover, .nav-dropdown .nav-dropdown__menu a:visited:hover {
   color: #000;
   text-decoration: underline;
 }
